--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,9 @@ services:
   mysql:
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - 'MYSQL_DATABASE=agreement_db'
+      - 'MYSQL_PASSWORD=Harsh@123'
+      - 'MYSQL_ROOT_PASSWORD=Harsh@123'
+      - 'MYSQL_USER=root'
     ports:
-      - '3306'
+      - '3306:3306'
