--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,12 @@
 services:
   mysql:
-    image: 'mysql:latest'
+    image: mysql:latest
+    container_name: agreement-mysql
     environment:
-      - 'MYSQL_DATABASE=agreement_db'
-      - 'MYSQL_PASSWORD=Harsh@123'
-      - 'MYSQL_ROOT_PASSWORD=Harsh@123'
-      - 'MYSQL_USER=root'
+      MYSQL_ROOT_PASSWORD: Harsh@123
+      MYSQL_DATABASE: agreement_db
+      MYSQL_PASSWORD: Harsh@123
     ports:
-      - '3306:3306'
+      - "3307:3306"
+
+
