--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=agreement
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate.ddl=true
 spring.jpa.show-sql=true
+
+cloudName=doz9540gq
+cloudApiKey=914676753832614
+cloudApiSecret=uvxXo8R8dH8x6D7mG1BWvgUEUZI
