--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate.ddl=true
 spring.jpa.show-sql=true
 
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 cloudName=doz9540gq
 cloudApiKey=914676753832614
 cloudApiSecret=uvxXo8R8dH8x6D7mG1BWvgUEUZI
+
+ALLOWED_ORIGIN=${ALLOWED_ORIGIN}
 
 
