certain changes of docker and .properties to build but failed

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,10 +3,10 @@ services:
     image: mysql:latest
     container_name: agreement-mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: Harsh@123
+      MYSQL_DATABASE: agreement_db
       MYSQL_USER: root
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_PASSWORD: Harsh@123
     ports:
       - "3307:3306"
     networks:
