--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,6 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.39.0'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
@@ -37,4 +36,5 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	enabled = false
 }
