--- a/compose.yaml
+++ b/compose.yaml
@@ -21,10 +21,10 @@ services:
     image: harsh237/agreementsb1 # Make sure to build your Spring Boot image
     container_name: agreement-app
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://agreement-mysql:3306/${MYSQL_DATABASE}
+      SPRING_DATASOURCE_URL: jdbc:mysql://agreement-mysql:3306/agreement_db
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
-      ALLOWED_ORIGIN: ${ALLOWED_ORIGIN}
+      SPRING_DATASOURCE_PASSWORD: Harsh@123
+      ALLOWED_ORIGIN: http://localhost:3000
     ports:
       - "8090:8080" # Exposing Spring Boot's port
     depends_on:
