--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://agreement-mysql:3306/agreement_db
 spring.datasource.username=root
 spring.datasource.password=Harsh@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 cloudName=doz9540gq
 cloudApiKey=914676753832614
