--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=agreement
 
+server.port=8080
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate.ddl=true
 spring.jpa.show-sql=true
